@@ -16,11 +16,11 @@ Build-Depends: debhelper (>= 7.0.50~), dpkg-dev (>= 1.14.10), po-debconf,
  libganglia1-dev (>= 3) [linux-any],
  libgcrypt11-dev,
  libglib2.0-dev,
+ libhal-dev,
  libhiredis-dev,
  libi2c-dev,
  libkvm-dev [kfreebsd-any],
  libldap2-dev,
- liblvm2-dev [linux-any],
  libmemcached-dev,
  libmodbus-dev,
  libmnl-dev [linux-any],
@@ -32,12 +32,10 @@ Build-Depends: debhelper (>= 7.0.50~), dpkg-dev (>= 1.14.10), po-debconf,
  libpcap0.8-dev | libpcap-dev,
  libperl-dev,
  libpq-dev,
- libprotobuf-c-dev,
- librdkafka-dev,
+ libprotobuf-c0-dev,
  librabbitmq-dev,
  librrd-dev (>= 1.4~),
  libsensors4-dev [linux-any],
- libsigrok-dev (>= 0.2~),
 # libsnmp-dev (>= 5.4.2.1~dfsg-4~) | (libsnmp-dev & perl (<< 5.10.1~rc2-1~))
  libsnmp-dev (>= 5.4.2.1~dfsg-4~) | libsnmp-dev | libsnmp9-dev,
  libsnmp-dev (>= 5.4.2.1~dfsg-4~) | perl (<< 5.10.1~rc2-1~),
@@ -45,7 +43,7 @@ Build-Depends: debhelper (>= 7.0.50~), dpkg-dev (>= 1.14.10), po-debconf,
  libtokyotyrant-dev [linux-any],
  libudev-dev [linux-any],
  libupsclient-dev | libupsclient1-dev,
- libvarnishapi-dev,
+ libvarnish-dev,
  libvirt-dev (>= 0.4.0-6) [linux-any],
  libxml2-dev,
  libyajl-dev,
@@ -53,7 +51,7 @@ Build-Depends: debhelper (>= 7.0.50~), dpkg-dev (>= 1.14.10), po-debconf,
  default-jdk [!hppa !sparc !kfreebsd-i386 !kfreebsd-amd64],
  protobuf-c-compiler,
  python-dev
-Build-Conflicts: libpthread-dev, libhal-dev
+Build-Conflicts: libpthread-dev
 Standards-Version: 3.9.6
 Homepage: http://collectd.org/
 Vcs-Git: git://git.tokkee.org/pkg-collectd.git
